[package]
name = "queue-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats="*"
futures = "*"
tokio = { version = "*", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }
serde = {version="*",features=["derive"]}
serde_json = "*"

[[bin]]
name = "p"
path = "./src/bin/publisher/main.rs"

[[bin]]
name = "c"
path = "./src/bin/consumer/main.rs"
